弱水阁标题样式修改

--- a/plugins/xiuxian-plugin/resources/html/Exchange/exchange.html
+++ b/plugins/xiuxian-plugin/resources/html/Exchange/exchange.html
@@ -12,10 +12,12 @@
   <div style="height: 1px;"></div>
 
   <div class="user_top">
-    <h1> 弱水阁</h1>
-    <div> #上架+物品名*数量*价格 (不填数量,默认为1)</div>
-    <div> #选购+编号 </div>
-    <div> #下架+编号 </div>
+    <h1>弱 水 阁</h1>
+  </div>
+  <div class="user_top user_help">
+    <span>#上架</span><span>物品名 * 数量 * 价格</span>
+    <span>#选购</span><span>编 号</span>
+    <span>#下架</span><span>编 号</span>
   </div>
 
   <div class="user_bottom1">
