--- a/plugins/xiuxian-association-pluging/resources/html/LabyrinthMap/LabyrinthMap.html
+++ b/plugins/xiuxian-association-pluging/resources/html/LabyrinthMap/LabyrinthMap.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-  <link rel="stylesheet" type="text/css" href="{{pluResPath}}/html/Exchange/exchange.css" />
+  <link rel="stylesheet" type="text/css" href="{{pluResPath}}/html/LabyrinthMap/LabyrinthMap.css" />
   <!-- <link rel="stylesheet" type="text/css" href="LabyrinthMap.css" /> -->
 </head>
 
