仓库相关优化及debug

--- a/resources/html/User/warehouse/warehouse.html
+++ b/resources/html/User/warehouse/warehouse.html
@@ -15,7 +15,7 @@
     <div class="user_top_left">
       <div class="user_top_right_font0">账号：{{user_id}}</div>
       <div class="user_top_right_font">道号：{{life.name}}</div>
-      <div class="user_top_right_font2">仓库物品个数：{{itemNum}}</div>
+      <div class="user_top_right_font2">仓库物品种类：{{itemNum}}</div>
     </div>
     <div class="user_top_right">
       <div class="user_top_img_bottom">
