--- a/resources/html/User/equipment/equipment.html
+++ b/resources/html/User/equipment/equipment.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-  <link rel="stylesheet" type="text/css" href="{{pluResPath}}/html/User/equipment/equipment.css" />
+  <link rel="stylesheet" type="text/css" href="{{cssPath}}" />
 </head>
 
 <body>
@@ -21,7 +21,7 @@
     </div>
     <div class="user_top_right">
       <div class="user_top_img_bottom">
-        <img class="user_top_img" src="https://q1.qlogo.cn/g?b=qq&s=0&nk={{user_id}}" onerror="whenError(this)" />
+        <img class="user_top_img" src="https://q1.qlogo.cn/g?b=qq&s=0&nk={{uid}}" onerror="whenError(this)" />
       </div>
     </div>
   </div>
@@ -43,15 +43,6 @@
       {{/each}}
     </div>
   </div>
-
-  </div>
-  <style>
-
-  </style>
-
 </body>
-
-<script>
-</script>
 
 </html>
