--- a/resources/html/User/player/player.html
+++ b/resources/html/User/player/player.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-  <link rel="stylesheet" type="text/css" href="{{pluResPath}}/html/User/player/player.css" />
+  <link rel="stylesheet" type="text/css" href="{{cssPath}}" />
 </head>
 
 <body>
@@ -14,25 +14,23 @@
   <div style="display:grid;grid-template-columns:auto auto;">
     <div class="user_top">
       <div class="user_top_left">
-        <div class="user_top_right_font0" style="padding: 5px;">账号：{{user_id}}</div>
+        <div class="user_top_right_font0" style="padding: 5px;">账号：{{uid}}</div>
         <div class="user_top_right_font1" style="padding: 5px;"> 道号：{{life.name}}</div>
         <div class="user_top_right_font" style="padding: 5px;">血量：{{battle.nowblood}}/{{battle.blood}}</div>
-        <div class="user_top_right_font2" style="padding: 5px;">寿龄：{{life.Age}}/{{life.life}}</div>
+        <div class="user_top_right_font2" style="padding: 5px;">寿龄：{{life.age}}/{{life.life}}</div>
       </div>
       <div class="user_top_right">
         <div class="user_top_img_bottom">
-          <img class="user_top_img" src="https://q1.qlogo.cn/g?b=qq&s=0&nk={{user_id}}" onerror="whenError(this)" />
+          <img class="user_top_img" src="https://q1.qlogo.cn/g?b=qq&s=0&nk={{uid}}" onerror="whenError(this)" />
         </div>
       </div>
-    </div>
-    <div class="user_right">
     </div>
   </div>
   <!--下-->
   <div class="user_bottom1">
     <div class="use_data">
       <div class="user_top_right_font0">[修心道宣]</div>
-      <div class="user_top_right_font2">{{player.autograph}}</div>
+      <div class="user_top_right_font2">{{life.autograph}}</div>
     </div>
   </div>
 
@@ -45,10 +43,10 @@
         <div>修为：{{level.experience}}</div>
         <div>体境：{{level.levelnamemax}}</div>
         <div>气血：{{level.experiencemax}}</div>
-        <div>仙石：{{xianshi}}</div>
-        <div>灵石：{{lingshi}}</div>
-        <div>灵根：{{linggenname}}</div>
-        <div>天赋：{{talentsize}}</div>
+        {{if talent.talentshow == 0}}
+        <div>灵根：{{talent.talentname}}</div>
+        <div>天赋：+{{talent.talentsize}}%</div>
+        {{/if}}
         <div class="user_top_right_font equipment">
           {{each equipment item}}
           <div>{{item.name}}</div>
@@ -72,13 +70,7 @@
       </div>
     </div>
   </div>
-  <style>
-
-  </style>
 
 </body>
-
-<script>
-</script>
 
 </html>
