--- a/resources/html/help/help.html
+++ b/resources/html/help/help.html
@@ -3,10 +3,8 @@
 
 <head>
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-  <link rel="stylesheet" type="text/css" href="{{pluResPath}}/html/help/common.css" />
-  <link rel="stylesheet" type="text/css" href="{{pluResPath}}/html/help/help.css" />
-  <link rel="stylesheet" type="text/css" href="common.css" />
-  <link rel="stylesheet" type="text/css" href="help.css" />
+  <link rel="stylesheet" type="text/css" href="{{cssCommon}}" />
+  <link rel="stylesheet" type="text/css" href="{{cssHelp}}" />
 </head>
 
 <body class="elem-default default-mode  ">
@@ -25,17 +23,11 @@
           </div>
           {{/each}}
         </div>
-
       </div>
     </div>
     {{/each}}
-    <div class="copyright">Created By Yunzai-Bot<span class="version">3</span> & Xiuxian-Plugin-Box<span
-        class="version">{{version}}</span></div>
+    <div class="copyright">Created By Yunzai-Bot<span class="version">3</span> & Xiuxian-Plugin-Box</div>
   </div>
 </body>
-
-<script>
-
-</script>
 
 </html>
