--- a/resources/html/map/map.html
+++ b/resources/html/map/map.html
@@ -3,13 +3,12 @@
 
 <head>
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-  <link rel="stylesheet" type="text/css" href="{{pluResPath}}/html/map/map.css" />
+  <link rel="stylesheet" type="text/css" href="{{cssPath}}" />
 </head>
 
 <body>
   <div class="updata-head-w">
-    <div class="updata-head">
-    </div>
+    <div class="updata-head"></div>
   </div>
 </body>
 
