--- a/resources/html/state/state.html
+++ b/resources/html/state/state.html
@@ -3,16 +3,18 @@
 
 <head>
   <meta http-equiv="content-type" content="text/html;charset=utf-8" />
-  <link rel="stylesheet" type="text/css" href="{{pluResPath}}/html/state/state.css" />
+  <link rel="stylesheet" type="text/css" href="{{cssPath}}" />
 </head>
 
 <body>
     <div class="state-top">
       <div class="use_data">
           <div class="user_font">#{{name}}</div>
-          {{each Level_list item}}
-          <div class="user_font"> 境界:{{item.name}}</div>
+          {{each list item}}
+          {{if item.id > level && level >= item.id - 2}}
+          <div class="user_font">境界:{{item.name}}</div>
           <div class="user_font">突破修为:{{item.exp}}</div>
+          {{/if}}
           {{/each}}
         </div>
     </div>
