--- a/resources/html/User/player/player.html
+++ b/resources/html/User/player/player.html
@@ -39,10 +39,10 @@
     <div class="use_data">
       <div class="user_top_right_font0">[基础信息]</div>
       <div class="user_top_right_font2 user_base_info">
-        <div>法境：{{level.levelname}}</div>
-        <div>修为：{{level.experience}}</div>
-        <div>体境：{{level.levelnamemax}}</div>
-        <div>气血：{{level.experiencemax}}</div>
+        <div>法境：{{level.levelName}}</div>
+        <div>修为：{{level.exp}}</div>
+        <div>体境：{{level.bodyLevelName}}</div>
+        <div>气血：{{level.bodyExp}}</div>
         {{if talent.talentshow == 0}}
         <div>灵根：{{talent.talentname}}</div>
         <div>天赋：+{{talent.talentsize}}%</div>
