--- a/resources/html/User/warehouse/warehouse.html
+++ b/resources/html/User/warehouse/warehouse.html
@@ -14,7 +14,7 @@
     <div class="user_top_left">
       <div class="user_top_right_font0">账号：{{uid}}</div>
       <div class="user_top_right_font">道号：{{life.name}}</div>
-      <div class="user_top_right_font1">仓库灵石：{{warehouse.lingshi}}</div>
+      <div class="user_top_right_font1">仓库灵石：{{warehouse.spiritStone}}</div>
       <div class="user_top_right_font2">仓库物品种类：{{warehouse.items.length}}</div>
     </div>
     <div class="user_top_right">
