调整功法和技能界面

--- a/resources/html/User/manual/manual.html
+++ b/resources/html/User/manual/manual.html
@@ -17,8 +17,8 @@
             {{/if}}
         </div>
         <div class="info-list">
-            <div style="font-weight:bold;">功法名</div>
-            <div style="font-weight:bold;">天赋</div>
+            <div style="font-weight:bold; color:wheat">功法名</div>
+            <div style="font-weight:bold; color:wheat">天赋</div>
             {{each talent.manualList item}}
             <div>{{item.name}}</div>
             <div>+{{item.buff}}%</div>
