--- a/resources/html/User/skill/skill.html
+++ b/resources/html/User/skill/skill.html
@@ -8,16 +8,16 @@
     <div class="info-panel">
         <div class="avatar">
             <img src="https://q1.qlogo.cn/g?b=qq&s=0&nk={{uid}}" onerror="whenError(this)" />
-            <div>名称</div>
+            <div>{{uid}}</div>
             <div>掌握技能数：{{skill.skillList.length}}</div>
         </div>
         <div class="info-list">
-            <div style="font-weight:bold;">技能名</div>
-            <div style="font-weight:bold;">伤害</div>
-            <!-- {{each skill.skillList item}}
+            <div style="font-weight:bold; color:wheat">技能名</div>
+            <div style="font-weight:bold; color:wheat">伤害</div>
+            {{each skill.skillList item}}
             <div>{{item.name}}</div>
             <div>+{{item.power}}%</div>
-            {{/each}} -->
+            {{/each}}
         </div>
     </div>
 </body>
