基础信息看不见灵根

--- a/resources/html/User/player/player.html
+++ b/resources/html/User/player/player.html
@@ -43,7 +43,7 @@
         <div>修为：{{level.exp}}</div>
         <div>体境：{{level.bodyLevelName}}</div>
         <div>气血：{{level.bodyExp}}</div>
-        {{if talent.show == 0}}
+        {{if talent.show}}
         <div>灵根：{{talent.spiritualRootName}}</div>
         <div>天赋：+{{talent.buff}}%</div>
         {{/if}}
