--- a/plugins/xiuxian-plugin/resources/html/exchange/exchange.html
+++ b/plugins/xiuxian-plugin/resources/html/exchange/exchange.html
@@ -8,17 +8,7 @@
 </head>
 
 <body>
-  <!--上-->
-  <div style="height: 1px;"></div>
-
-  <div class="user_top">
-    <h1>弱 水 阁</h1>
-  </div>
-  <div class="user_top user_help">
-    <span>#上架</span><span>物品名 * 数量 * 价格</span>
-    <span>#选购</span><span>编 号</span>
-    <span>#下架</span><span>编 号</span>
-  </div>
+  <div class="user_top">弱 水 阁</div>
 
   <div class="user_bottom1">
     <div class="use_data">
