--- a/plugins/xiuxian-plugin/resources/html/shop/shop.html
+++ b/plugins/xiuxian-plugin/resources/html/shop/shop.html
@@ -7,15 +7,7 @@
 </head>
 
 <body>
-  <div style="height: 1px;"></div>
-
-  <div class="user_top">
-    <h1>凡 仙 堂</h1>
-  </div>
-  <div class="user_top user_help">
-    <span>#购买</span><span>物品名 * 数量</span>
-    <span>#出售</span><span>物品名 * 数量</span>
-  </div>
+  <div class="user_top">凡 仙 堂</div>
 
   <div class="user_bottom1">
     <div class="user_data">
