--- a/resources/html/User/player/player.html
+++ b/resources/html/User/player/player.html
@@ -17,7 +17,7 @@
         <div class="user_top_right_font0" style="padding: 5px;">账号：{{uid}}</div>
         <div class="user_top_right_font1" style="padding: 5px;"> 道号：{{life.name}}</div>
         <div class="user_top_right_font" style="padding: 5px;">血量：{{battle.nowblood}}/{{battle.blood}}</div>
-        <div class="user_top_right_font2" style="padding: 5px;">寿龄：{{life.age}}/{{life.life}}</div>
+        <div class="user_top_right_font2" style="padding: 5px;">寿龄：{{life.age}}/{{life.lifetime}}</div>
       </div>
       <div class="user_top_right">
         <div class="user_top_img_bottom">
