快捷交易考虑灵石与容量

--- a/plugins/easy-command/resources/html/help/help.html
+++ b/plugins/easy-command/resources/html/help/help.html
@@ -25,20 +25,20 @@
 		<div class="group-head">快捷指令</div>
 		<div class="group-body">
 			<div class="cmd-box">
-				<div>#快捷出售/购买【物品】</div>
-				<div>位于凡仙堂可使用，用于批量操作物品，物品数量为最大值。</div>
+				<div>#快捷出售 / 购买【物品】</div>
+				<div>位于凡仙堂可使用，用于批量操作物品，物品数量为最大值。只涉及一种物品时会根据背包容量和背包灵石修改数量。</div>
 			</div>
 			<div class="cmd-box">
 				<div>#快捷恢复、#快捷恢复80%</div>
 				<div>不指定百分比可查询当前血量。指定百分比则根据背包恢复药情况自动选择搭配方案，并服用恢复药，恢复血量不会超过给出的百分比。</div>
 			</div>
 			<div class="cmd-box">
-				<div>#快捷服用修为药/气血药</div>
+				<div>#快捷服用修为药 / 气血药</div>
 				<div>服用背包所有的修为药或气血药。</div>
 			</div>
 			<div class="cmd-box">
-				<div>#快捷学习功法/技能</div>
-				<div>学习背包里所有可以学习的功法或者技能书。</div>
+				<div>#快捷学习功法 / 技能</div>
+				<div>学习背包里所有可以学习的功法或者技能书。功法数达到上限时会自动替换低级功法。</div>
 			</div>
 		</div>
 	</div>
