新增道具分类，新增快捷存取，代码调整

--- a/plugins/easy-command/resources/html/help/help.html
+++ b/plugins/easy-command/resources/html/help/help.html
@@ -17,7 +17,7 @@
 				进行操作。统称【物品】。
 			</div>
 			<div style="text-align:center; font-weight:bold; margin-top:5px;">
-				武器、护具、法宝、装备、恢复药、修为药、气血药、丹药、功法、技能书、全部物品
+				武器、护具、法宝、装备、恢复药、修为药、气血药、丹药、功法、技能书、道具、全部物品
 			</div>
 		</div>
 	</div>
@@ -39,6 +39,10 @@
 			<div class="cmd-box">
 				<div>#快捷学习功法 / 技能</div>
 				<div>学习背包里所有可以学习的功法或者技能书。功法数达到上限时会自动替换低级功法。</div>
+			</div>
+			<div class="cmd-box">
+				<div>#快捷存 / 取灵石 / 【物品】</div>
+				<div>位于万宝楼可使用。最大存取灵石。批量存取物品。</div>
 			</div>
 		</div>
 	</div>
