新增快捷赠送功能

--- a/plugins/easy-command/resources/html/help/help.html
+++ b/plugins/easy-command/resources/html/help/help.html
@@ -44,6 +44,10 @@
 				<div>#快捷存 / 取灵石 /【物品】</div>
 				<div>位于万宝楼可使用。最大存取灵石。批量存取物品。</div>
 			</div>
+			<div class="cmd-box">
+				<div>#快捷赠送【物品】@群友</div>
+				<div>批量赠送物品，不包括灵石。</div>
+			</div>
 		</div>
 	</div>
 </body>
