新增小道消息

--- a/plugins/easy-command/resources/html/help/help.html
+++ b/plugins/easy-command/resources/html/help/help.html
@@ -29,6 +29,10 @@
 				<div>位于凡仙堂可使用，用于批量操作物品，物品数量为最大值。只涉及一种物品时会根据背包容量和背包灵石修改数量。</div>
 			</div>
 			<div class="cmd-box">
+				<div>#小道消息</div>
+				<div>位于凡仙堂可使用，花费1000灵石购买小道消息。</div>
+			</div>
+			<div class="cmd-box">
 				<div>#快捷恢复、#快捷恢复80%</div>
 				<div>不指定百分比可查询当前血量。指定百分比则根据背包恢复药情况自动选择搭配方案，并服用恢复药，恢复血量不会超过给出的百分比。</div>
 			</div>
