--- a/resources/html/User/manual/manual.html
+++ b/resources/html/User/manual/manual.html
@@ -19,9 +19,11 @@
         <div class="info-list">
             <div style="font-weight:bold; color:wheat">功法名</div>
             <div style="font-weight:bold; color:wheat">天赋</div>
+            <div style="font-weight:bold; color:wheat">钻研度</div>
             {{each talent.manualList item}}
             <div>{{item.name}}</div>
             <div>+{{item.buff}}%</div>
+            <div>{{item.buffPercent}}%</div>
             {{/each}}
         </div>
     </div>
